add team-member model

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,6 +24,6 @@
     {% block body %}{% endblock %}
   </div>
   <footer>
-    &copy; Copyright 2018 by Valentina,,,.
+    &copy; Copyright 2018 by valentina2095.
   </footer>
 </body>
