--- a/templates/layout.html
+++ b/templates/layout.html
@@ -190,7 +190,7 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="/static//static/img/portfolio/06-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="/static/img/portfolio/06-thumbnail.jpg" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>Window</h4>
@@ -215,7 +215,7 @@
             <ul class="timeline">
               <li>
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="/static//static/img/about/1.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="/static/img/about/1.jpg" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -229,7 +229,7 @@
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="/static//static/img/about/2.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="/static/img/about/2.jpg" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -243,7 +243,7 @@
               </li>
               <li>
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="/static//static/img/about/3.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="/static/img/about/3.jpg" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -257,7 +257,7 @@
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="/static//static/img/about/4.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="/static/img/about/4.jpg" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -294,7 +294,7 @@
         <div class="row">
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="/static//static/img/team/1.jpg" alt="">
+              <img class="mx-auto rounded-circle" src="/static/img/team/1.jpg" alt="">
               <h4>Kay Garland</h4>
               <p class="text-muted">Lead Designer</p>
               <ul class="list-inline social-buttons">
@@ -318,7 +318,7 @@
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="/static//static/img/team/2.jpg" alt="">
+              <img class="mx-auto rounded-circle" src="/static/img/team/2.jpg" alt="">
               <h4>Larry Parker</h4>
               <p class="text-muted">Lead Marketer</p>
               <ul class="list-inline social-buttons">
@@ -342,7 +342,7 @@
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="/static//static/img/team/3.jpg" alt="">
+              <img class="mx-auto rounded-circle" src="/static/img/team/3.jpg" alt="">
               <h4>Diana Pertersen</h4>
               <p class="text-muted">Lead Developer</p>
               <ul class="list-inline social-buttons">
